--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,13 @@ body {
   display: none !important;
 }
 
+ol,
+ul {
+  list-style: inside;
+  margin: 0;
+  padding-left: 24px;
+}
+
 .custom-scrollbar::-webkit-scrollbar {
   width: 8px;
   height: 12px;
@@ -120,12 +127,38 @@ body {
 .scroll-indicator {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 6px;
+  left: 1vw;
+  width: 2px;
   height: 100%;
   background: linear-gradient(to bottom, #00CCCC, #ffffff);
   transform-origin: top;
   transform: scaleY(0);
   z-index: 9999;
   pointer-events: none;
+}
+
+
+/* masonry.css */
+.masonry-container {
+  column-count: 3; /* Number of columns for large screens */
+  column-gap: 20px; /* Gap between columns */
+  width: 100%;
+}
+
+.masonry-item {
+  display: inline-block;
+  margin-bottom: 20px; /* Gap between rows */
+  width: 100%; /* Full width of column */
+}
+
+@media (max-width: 1100px) {
+  .masonry-container {
+    column-count: 2; /* Number of columns for medium screens */
+  }
+}
+
+@media (max-width: 700px) {
+  .masonry-container {
+    column-count: 1; /* Number of columns for small screens */
+  }
 }
