--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -133,7 +133,7 @@ ul {
   background: linear-gradient(to bottom, #00CCCC, #ffffff);
   transform-origin: top;
   transform: scaleY(0);
-  z-index: 9999;
+  z-index: 1;
   pointer-events: none;
 }
 
@@ -149,15 +149,15 @@ h6 {
 }
 
 .prose h1 {
-  @apply lg:text-h1 text-h1M font-bold mb-4;
+  @apply lg:text-h1 text-h1M font-light mb-4;
 }
 
 .prose h2 {
-  @apply lg:text-h2 text-h2M font-semibold mt-6 mb-4;
+  @apply lg:text-h2 text-h2M font-light mt-6 mb-4;
 }
 
 .prose h3 {
-  @apply lg:text-h3 text-h3M font-medium mt-5 mb-3;
+  @apply lg:text-h3 text-h3M font-light mt-5 mb-3;
 }
 
 .prose p {
